# hsl_leap

./: .gitignore  LICENSE  README.md  pyproject.toml
old/: joints.py  leap_hand_old.py  test.py  test.urdf
src/hsl_leap/: __init__.py  leap_hand.py
src/hsl_leap/calibration/: leap_hand.json  leap_hand_mj.json
src/hsl_leap/cameras/: camera.py  configs.py  utils.py
src/hsl_leap/cameras/realsense/: __init__.py  camera_realsense.py  configuration_realsense.py
src/hsl_leap/motors/: __init__.py  calibration_gui.py  encoding_utils.py  motors_bus.py
src/hsl_leap/motors/dynamixel/: dynamixel.py  tables.py
src/hsl_leap/robots/: __init__.py  config.py  robot.py
src/hsl_leap/utils/: decorators.py  errors.py  utils.py
sysid/: calculate_armature_friction.py  calculate_gains.py  collect_trajectory.ipynb  collect_trajectory.py  get_camera_params.py  get_max_vel.py  measure_pd_gains.py  measure_read_write_delay.py  sysid_real.ipynb  sysid_sim.ipynb  test_action_clipping.py  test_ema.py  visualize_depth.py  visualize_realsense.py  visualize_realsense_urdf.py  visualize_urdf.py
sysid/assets/leap_hand/mjcf/: right_hand.xml
sysid/assets/leap_hand/urdf/: leap_hand_right.urdf
sysid_v2/: calculate_p_gain.py
