[build-system]
requires = ["uv_build==0.9.5"]
build-backend = "uv_build"

[project]
name = "hsl-leap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepdiff>=8.6.1",
    "dynamixel-sdk>=4.0.3",
    "pygame>=2.6.1",
    "pyserial>=3.5",
    "tqdm>=4.67.1",
]
