[build-system]
requires = ["uv_build==0.9.5"]
build-backend = "uv_build"

[project]
name = "hsl-leap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dynamixel-sdk>=4.0.3",
    "lerobot>=0.4.2",
]

[project.optional-dependencies]
sysid = [
    "ipykernel>=7.2.0",
    "mediapy>=1.2.6",
    "mujoco[sysid]>=3.5.0",
    "pyrealsense2>=2.56.5.9235",
    "tyro>=1.0.6",
    "viser>=1.0.21",
]
